antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__compaction_running_narrow.snap
---
source: tui/src/chatwidget/tests/compaction_tests.rs
expression: "normalize_compaction_snapshot(render_bottom_popup(&chat, 40))"
---
• Compacting context (<elapsed> • esc to i…
  └ Making room to continue.


 ┃ Ask Antex to do anything

  gpt-5.6-sol default · /tmp/project
