antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__enter_steers_during_plan.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
expression: "render_bottom_popup(&chat, width)"
---
• Proposed Plan


  - Step 1

• Messages to be submitted after next tool call (press esc to interrupt and send
  immediately)
  ↳ steer submission

 ┃ Ask Antex to do anything

  gpt-5.6-sol medium · /tmp/project                                  Plan mode
